# Election-2028

./: .gitignore  README.md  pyproject.toml  run_wiki_scraper.sh  scrape-wiki-polls.sh
automated/: .env.example  README.md  betting-market-check.sh  check_new_polls.py  config.py  election-winner.sh  farrer-by-election-check.sh  farrer_scraper.py  lint-all.sh  next-pm-check.sh  next_pm_scraper.py  notifications.py  poll-check.sh  robust_scraper.py  scrape_wikipedia_polls.py  utils.py
betting-data/: sportsbet-2025-election-winner.csv  sportsbet-2026-farrer-by-election.csv  sportsbet-2028-election-winner.csv  sportsbet-2028-next-pm.csv
historic-data/: election-outcomes.csv  seats.csv
historic-data/preferences/: 2004-two-party-preferred-flow-by-party.csv  2007-two-party-preferred-flow-by-party.csv  2010-two-party-preferred-flow-by-party.csv  2013-two-party-preferred-flow-by-party.csv  2016-two-party-preferred-flow-by-party.csv  2019-two-party-preferred-flow-by-party.csv  2022-two-party-preferred-flow-by-party.csv  2025-two-party-preferred-flow-by-party.csv  2025-two-party-preferred-flow-by-state-by-party.csv
notebooks/: _capture-odds-election-winner-at-sportsbet.ipynb  _chart-election-winner-at-sportsbet.ipynb  capture_odds_election_winner_at_sportsbet.ipynb  chart_LOESS_Trend_Analysis.ipynb  chart_election_winner_at_sportsbet.ipynb  chart_farrer_by_election_at_sportsbet.ipynb  chart_labor_2pp_loess_new.ipynb  common.py  polling_data_etl.py  previous_election.py  previous_election_outcomes.ipynb  scrape_wikipedia_polls.py
notebooks/pymc/: bayes_tools.py  extraction.py  plot_house_effects.py  (+2 more)
poll-data/: preferred_pm_next_2025-07-23.csv  voting_intention_next_2025-07-21.csv  voting_intention_next_2025-07-23.csv
