[project]
name = "Election-2028"
version = "0.0.0"
description = "Australian Federal Election 2028"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    # - Jupyter notebooks
    "jupyter",
    "jupyterlab",
    "ipykernel",
    "watermark",

    # - system
    "typing",
    "python-decouple",

    # - bespoke
    "readabs",
    "mgplot",

    # - data science
    "matplotlib",
    "numpy",
    "pandas",
    "openpyxl",
    "xlrd",
    "statsmodels",

    # - internet
    "requests",
    "bs4",
    "lxml",
    "webdriver_manager",
    "selenium",

    # - Bayesian
    "pymc",
    "arviz<1.0.0",
    "jax<0.10",  # numpyro 0.20.1 incompatible with jax 0.10+ (pyro-ppl/numpyro#2174)
    "numpyro",
    "graphviz",

    # - code
    "nbqa",
    "black",
    "pylint",
    "ruff",
    "mypy",
    "pyright",

    # - typing
    "pandas-stubs",
    "numpy-typing",
    "types-selenium",
    "types-requests",
]
